momentuHMM 1.4.1 2018-03-15
-----------------
NEW FEATURES

* timeInStates function added for calculating activity budgets

CHANGES

* bug fix when a pseudo-design matrix formula includes interactions with >1 factor variable

* check and print package version upon loading

* updated citation info


momentuHMM 1.4.0 2018-02-27
-----------------
NEW FEATURES

* von Mises consensus distribution of Rivest et al. (2016) can now be specified for angular data streams

* angleStrength function can now be used in circular-circular regression models. This allows each angular covariate (e.g. wind direction) to be weighted by an additional positive real covariate (e.g. wind speed) as in Rivest et al. (2016).

* checkPar0 function added to aid users with initial parameter (e.g. Par0, beta0, delta0) specification

* centroids argument added to MIfitHMM

* useInitial argument added to MIfitHMM for using parameter estimates of first model fit as initial values for all subsequent model fits

* retrySD argument added to fitHMM and MIfitHMM for specifying standard deviation of random normal perturbations when using retryFits

* alternative optimization methods (``Nelder-Mead'' and ``SANN'') can now be specified in fitHMM and MIfitHMM using the optMethod and control arguments

* prior argument added to fitHMM and MIfitHMM for specifying prior distributions on working parameters

* AICweights function added for calculating AIC weights across a set of candidate models

* sample size (n) argument added to AIC.momentuHMM for calculating small sample corrected AIC (i.e. AICc)

* crawlPlot argument added to plot.crwData as a wrapper for crawl::crwPredictPlot

* various graphical parameters added to plot.momentuHMM for plot customization

CHANGES

* For multiple imputation analyses, pseudoRes (and plotPR) can now calculate (and plot) pseudo-residuals individually for each model fit

* cons and workcons arguments are now deprecated; please use workBounds instead
